Refactor errors to match json api spec
Update todo integration spec
